@@ -63,6 +63,15 @@ settingCommanders = {
   "tllcom7"
 }
 
+settingNeutralUnits = {
+  -- CORE
+  "corpunk",
+  -- ARM
+  "armflea",
+  -- TLL
+  "tllbug"
+}
+
 --------------------------------------------------------------------------------
 --------------------------------------------------------------------------------
 
